actualización position camera VR

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
       </a-assets>
 
       <a-obj-model src="#crate-obj" mtl="#crate-mtl"></a-obj-model>
-      
       <a-obj-model src="crate.obj" mtl="crate.mtl"></a-obj-model>
 
       <a-entity position="0 3 -5">
@@ -58,7 +57,7 @@
       <a-sky color="#fff"></a-sky>
 
       <!-- Añadir el cursor -->
-      <a-entity camera look-controls>
+      <a-entity camera look-controls position="0 1.6 0">
         <a-cursor></a-cursor>
       </a-entity>
     </a-scene>
