--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
 
       <a-plane position="0 0 -5" rotation="0 0 0" width="100" height="0.1" color="#555"></a-plane>
   
+      <!-- Botón -->
+      <a-entity position="0 1.5 -4" rotation="0 0 0">
+        <a-box color="blue" width="2" height="1" depth="0.1" class="clickable"></a-box>
+        <a-text value="Click Me" align="center" position="0 0 0.06"></a-text>
+        <a-entity cursor-listener></a-entity>
+      </a-entity>
+
+      <!-- Panel de Información -->
+      <a-plane id="infoPanel" position="0 1.5 -3" width="4" height="2" color="#FFF" visible="false">
+        <a-text value="Canción: Amiga mía\nAuthor: Alejandro Sanz\nAño: 1997" color="#000" align="center" position="0 0.5 0"></a-text>
+        <a-box color="red" width="0.5" height="0.5" depth="0.1" position="1.75 0.75 0" class="clickable" onclick="closeInfoPanel()"></a-box>
+        <a-text value="X" align="center" position="1.75 0.75 0.06"></a-text>
+      </a-plane>
 
       <a-sky color="#fff"></a-sky>
 
