añadidición del movimiento de las teclas para el entorno

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
       <a-sky color="#fff"></a-sky>
 
-      <!-- Añadir el cursor -->
-      <a-entity camera look-controls position="0 1.6 0">
+      <!-- Añadir la cámara con controles de movimiento -->
+      <a-entity camera look-controls wasd-controls position="0 1.6 0">
         <a-cursor></a-cursor>
       </a-entity>
     </a-scene>
